feat: link subjects to goals and enhance goal progress tracking